saved by the summer bytes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <meta charset="utf-8">
-<title>dw mural</title>
+<title>PrayLikeTheMusicHuman muraL</title>
 <meta name=viewport content="width=device-width">
 <meta name=color-scheme content="dark light">
 <meta name=theme-color content="darkviolet">
@@ -13,13 +13,19 @@
 
 <main>
   <h1>
-    <a href="/dance">dance</a>
-    <a href="/vowel">w/</a>
+    <a href="../" class="emo">🛐</a>
+    <a href="/vowel"><em>pray</em>lik<b>et</b>hemusi<code>ch</code>uman</a>
   </h1>
-  <menu>
-    <li><a href="/aoyo">raindrops</a>
-    <li><a href="/nature">elefance</a>
-    <li><a href="/iona">doves</a>
-    <li><a href="/aya">color</a>
-  </menu>
+  <p>
+    Yes, <em>hu</em>man
+  </p>
+  <p>
+    Eye hope you pray
+  </p>
+  <p>
+    While music plays
+  </p>
+  <p>
+    And demons pray
+  </p>
 </main>
